transactor/transactor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: transactor
  name: transactor
spec:
  ingressClassName: nginx
  rules:
    - host: transactor.${DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: transactor
                port:
                  number: 80
            path: /
            pathType: Prefix
